<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, WeightRecorderActivity!</string>
    <string name="app_name">体重计</string>
    <string name="profileLabel">个人资料设定</string>
    <string name="recordListLabel">体重记录列表</string>
    <string name="profileTextviewHeight">您的身高是</string>
    <string name="profileTextviewHeightTip">厘米</string>
    <string name="profileTextviewBirth">您生于</string>
    <string name="profileTextviewBirthTip">年</string>
    <string name="profileTextviewGender">您的性别是</string>
    <string name="profileRadioTextFemale">女</string>
    <string name="profileRadioGenderMale">男</string>
    <string name="profileTextviewWeightGoal">您的目标体重是</string>
    <string name="profileTextviewWeightGoalTip">千克</string>
    <string name="profileTextviewWeightRecommendPrefix">（健康体重范围是：</string>
    <string name="profileTextviewWeightRecommendSuffix">千克）</string>
    <string name="profileButtonSave">保存</string>
    <string name="inputPreviousDay">&lt;</string>
    <string name="inputNextDay">&gt;</string>
    <string name="inputDecreaseWeight">-0.1</string>
    <string name="inputIncreaseWeight">+0.1</string>
    <string name="mainInputRecord">记录</string>
    <string name="mainListTitleDate">日期</string>
    <string name="mainListTitleChange">变化</string>
    <string name="mainListTitleWeight">体重</string>
    <string name="mainEditTextMainInputHint">请输入体重</string>
    <string name="backupUrl">http://i.cz029.com:7674/wrbak/bak</string>

</resources>