<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profileMain"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profileTextviewHeight"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/profileEditTextHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="3"
                android:layout_weight="1"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/profileTextviewHeightTip"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profileTextviewBirth"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/profileSpinnerBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/profileTextviewBirthTip"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profileTextviewGender"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <RadioGroup
            android:id="@+id/profileRadioGroupGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/profileRadioGenderFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/profileRadioTextFemale" />

            <RadioButton
                android:id="@+id/profileRadioGenderMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profileRadioGenderMale" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profileTextviewWeightGoal"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/profileEditTextGoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal" >
            </EditText>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/profileTextviewWeightGoalTip"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profileTextviewWeightRecommendPrefix"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/profileTextviewWeightRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#00ff00"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profileTextviewWeightRecommendSuffix"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/profileSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/profileButtonSave" />
    </LinearLayout>

</RelativeLayout>